--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,60 +10,136 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="uk.co.nyakeh.stacks.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="uk.co.nyakeh.stacks.MainActivity">
 
-    <TextView
-        android:id="@+id/stockName"
+    <LinearLayout
+        android:id="@+id/main_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Vanguard FTSE 250 ETF"
-        android:textSize="30dp"
-        android:textStyle="bold"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/stockSymbol"
+        <TextView
+            android:id="@+id/stockName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/stockName"
+            android:textSize="30sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/stockPriceChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="..."
+            android:textSize="40sp"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/stockName"
-        android:gravity="center"
-        android:text="VMID.L"
-        android:textSize="20dp"/>
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/stockExchange"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/stockSymbol"
-        android:gravity="center"
-        android:text="LSE"
-        android:textSize="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/stockChange"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/stockExchange"
-        android:gravity="center"
-        android:textSize="20dp"
-        tools:text="+7.00"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="Change"
+                android:textSize="16sp"/>
 
-    <TextView
-        android:id="@+id/stockChangeInPercent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/stockChange"
-        android:gravity="center"
-        android:textSize="20dp"
-        tools:text="+0.27%"/>
+            <TextView
+                android:id="@+id/stockChange"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:textSize="20sp"
+                tools:text="+7.00"/>
 
-    <TextView
-        android:id="@+id/stockOpen"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/stockChangeInPercent"
-        android:gravity="center"
-        android:textSize="20dp"
-        tools:text="25.87"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="Change in Percent"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/stockChangeInPercent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:textSize="20sp"
+                tools:text="+0.27%"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="Open"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/stockOpen"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="..."
+                android:textSize="20sp"
+                tools:text="25.87"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="Symbol"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/stockSymbol"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="..."
+                android:textSize="20sp"
+                tools:text="VMID.L"/>
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
