--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -62,6 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
+                android:text="..."
                 android:textSize="20sp"
                 tools:text="+7.00"/>
 
@@ -86,6 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:gravity="center"
+                android:text="..."
                 android:textSize="20sp"
                 tools:text="+0.27%"/>
 
@@ -113,7 +115,7 @@
                 android:gravity="center"
                 android:text="..."
                 android:textSize="20sp"
-                tools:text="25.87"/>
+                tools:text="£25.87"/>
 
         </LinearLayout>
 
@@ -140,6 +142,31 @@
                 android:text="..."
                 android:textSize="20sp"
                 tools:text="VMID.L"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="Current Valuation"
+                android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/stockValuation"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text="..."
+                android:textSize="20sp"
+                tools:text="£986.47"/>
+
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
