--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -35,6 +35,15 @@
             android:text="..."
             android:textSize="40sp"
             android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/stockDailyValuationChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="..."
+            android:textSize="40sp"
+            android:textStyle="bold"/>
     </LinearLayout>
 
     <LinearLayout
