+ Choose app colour scheme (green == money) + Created refresh icon from Vector Asset Studio, lets you set an SVG which can then be filled with any colour desired!!!

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,7 @@
        android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#478632"
-        android:endColor="#458131"
-        android:startColor="#519839"
+        android:startColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorAccent"
         android:type="linear"/>
 </shape>
