--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -5,15 +5,15 @@
         <item
             android:id="@+id/nav_main"
             android:icon="@drawable/ic_star"
-            android:title="Home"/>
+            android:title="@string/home"/>
         <item
             android:id="@+id/nav_stock"
-            android:icon="@drawable/ic_calendar"
-            android:title="Stock"/>
-        <item
-            android:id="@+id/nav_graph"
             android:icon="@drawable/ic_timeline"
-            android:title="Graph"/>
+            android:title="@string/stock"/>
+        <item
+            android:id="@+id/nav_purchaseHistory"
+            android:icon="@drawable/ic_calendar"
+            android:title="@string/purchase_history"/>
     </group>
 
 </menu>
