--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,7 @@
             android:textStyle="bold"/>
 
         <View
-            android:layout_width="160dp"
+            android:layout_width="220dp"
             android:layout_height="1dp"
             android:layout_gravity="center"
             android:layout_marginBottom="30dp"
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="lifetime"
+            android:text="lifetime (GBP)"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"/>
 
@@ -53,7 +53,7 @@
             android:textStyle="bold"/>
 
         <View
-            android:layout_width="160dp"
+            android:layout_width="220dp"
             android:layout_height="1dp"
             android:layout_gravity="center"
             android:layout_marginBottom="30dp"
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="daily gains"
+            android:text="daily gains (GBP)"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"/>
 
