Added graphs page to house pretty robinhood 'spark' line chart of my net worth. added new activity to the Apps navigation.

--- a/app/src/main/res/layout/app_bar_net_worth.xml
+++ b/app/src/main/res/layout/app_bar_net_worth.xml
@@ -3,27 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/app_bar_stock_purchase"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="uk.co.nyakeh.stacks.StockPurchaseActivity">
+    tools:context="uk.co.nyakeh.stacks.StockActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/stock_purchase_toolbar"
+            android:id="@+id/net_worth_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_stock_purchase"/>
+    <include layout="@layout/content_net_worth"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -31,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add"
+        android:src="@drawable/ic_refresh"
         android:tint="@color/colorIcons"/>
 
 </android.support.design.widget.CoordinatorLayout>
