--- a/app/src/main/res/layout/content_net_worth.xml
+++ b/app/src/main/res/layout/content_net_worth.xml
@@ -10,11 +10,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="uk.co.nyakeh.stacks.NetWorthActivity"
-    tools:showIn="@layout/activity_net_worth">
+    tools:context="uk.co.nyakeh.stacks.NetWorthActivity">
 
-    <com.robinhood.spark.SparkView
-        android:id="@+id/sparkView"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" >
+
+        <com.robinhood.spark.SparkView
+            android:id="@+id/sparkView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
