--- a/app/src/main/res/layout/content_stock_purchase.xml
+++ b/app/src/main/res/layout/content_stock_purchase.xml
@@ -10,8 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="uk.co.nyakeh.stacks.StockPurchaseActivity"
-    tools:showIn="@layout/activity_stock_purchase">
+    tools:context="uk.co.nyakeh.stacks.StockPurchaseActivity">
 
     <LinearLayout
         android:id="@+id/newStockPurchase"
