--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="auxiliary_margin">16dp</dimen>
+    <dimen name="line_width">7dp</dimen>
+    <dimen name="corner_radius">20dp</dimen>
 </resources>
