--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,8 +25,8 @@
 
     <style name="MySparkViewStyle" parent="@style/spark_SparkView">
         <item name="spark_lineColor">@color/colorPrimaryDark</item>
-        <!--<item name="spark_lineWidth">@dimen/line_width</item>-->
-        <!--<item name="spark_cornerRadius">@dimen/corner_radius</item>-->
+        <item name="spark_lineWidth">@dimen/line_width</item>
+        <item name="spark_cornerRadius">@dimen/corner_radius</item>
         <item name="spark_fill">false</item>
         <!--<item name="spark_baseLineColor">@color/base_line_color</item>-->
         <!--<item name="spark_baseLineWidth">@dimen/base_line_width</item>-->
