Added header to graph to house the 'Scrubbing' (user touch point) value output. Set the toolbars elevation to zero to remove the shadow so that the header blends into the toolbar.

--- a/app/src/main/res/layout/content_net_worth.xml
+++ b/app/src/main/res/layout/content_net_worth.xml
@@ -5,16 +5,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="uk.co.nyakeh.stacks.NetWorthActivity">
 
+    <TextView
+        android:id="@+id/graph_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:paddingBottom="64dp"
+        android:text="ca$h mon€y"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/graph_header"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="-48dp">
 
         <com.robinhood.spark.SparkView
             android:id="@+id/sparkView"
