--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,7 +2,7 @@
        android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:startColor="@color/colorPrimaryDark"
-        android:endColor="@color/colorAccent"
+        android:startColor="@color/colorAccent"
+        android:endColor="@color/colorPrimaryDark"
         android:type="linear"/>
 </shape>
