--- a/app/src/main/res/layout/gains_widget.xml
+++ b/app/src/main/res/layout/gains_widget.xml
@@ -2,6 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="@dimen/widget_margin"
     android:gravity="center">
 
@@ -12,13 +13,23 @@
         android:id="@+id/gains_widget_icon"/>
 
     <TextView
-        android:id="@+id/gains_widget_text"
-        android:textAlignment="center"
+        android:id="@+id/gains_widget_percentage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
+        android:textColor="@color/colorIcons"
         android:textSize="24sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        tools:text="↑6.35%"
+        />
+
+    <TextView
+        android:id="@+id/gains_widget_diff"
+        android:layout_width="wrap_content"
+        android:paddingLeft="8dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorDivider"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:text="£198.35"/>
 
 </LinearLayout>
