Delete default text from mainActivity fund name

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/stockName"
+            tools:text="@string/stockName"
             android:textSize="30sp"
             android:textStyle="bold"/>
 
