--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -39,7 +39,6 @@
             android:textSize="40sp"
             android:textStyle="bold"
             tools:text="£232.42"/>
-
     </android.support.v7.widget.CardView>
 
     <TextView
@@ -70,7 +69,6 @@
             android:textSize="40sp"
             android:textStyle="bold"
             tools:text="£3287.17"/>
-
     </android.support.v7.widget.CardView>
 
     <TextView
@@ -84,4 +82,22 @@
         android:textStyle="bold"
         tools:text="0.787%"/>
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/dashboard_daysSinceInvestment_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dashboard_percentageFI"
+        android:layout_margin="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:id="@+id/dashboard_daysSinceInvestment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/auxiliary_margin"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            tools:text="14 days"/>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
