--- a/app/src/main/res/layout/content_stock_purchase.xml
+++ b/app/src/main/res/layout/content_stock_purchase.xml
@@ -59,5 +59,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/newStockPurchase"
+        android:background="@color/red"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 </RelativeLayout>
