+ Added new page to hold stocks that i'm currently tracking (I want to build towards a page that will tell me whens a good time to buy & which fund out of a small shortlist).

--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/dashboard"/>
         <item
+            android:id="@+id/nav_fund"
+            android:icon="@drawable/ic_timeline"
+            android:title="@string/funds"/>
+        <item
             android:id="@+id/nav_stock"
             android:icon="@drawable/ic_menu_send"
             android:title="@string/stock"/>
