--- a/app/src/main/res/layout/content_fund.xml
+++ b/app/src/main/res/layout/content_fund.xml
@@ -16,13 +16,8 @@
         <TextView
             android:id="@+id/fund_header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:paddingBottom="64dp"
-            android:text="@string/fund_header"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+            android:layout_height="48dp"
+            android:background="@color/colorPrimary"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/fund_vmid_card"
