--- a/app/src/main/res/layout/content_fund.xml
+++ b/app/src/main/res/layout/content_fund.xml
@@ -14,7 +14,6 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/fund_header"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@color/colorPrimary"/>
@@ -23,11 +22,9 @@
             android:id="@+id/fund_vmid_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/fund_header"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="-48dp">
+            android:layout_marginRight="@dimen/activity_horizontal_margin">
 
             <LinearLayout
                 android:layout_width="match_parent"
