--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -14,25 +14,17 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/dashboard_header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:paddingBottom="64dp"
-            android:text="@string/dashboard_header"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+            android:layout_height="48dp"
+            android:background="@color/colorPrimary"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/netWorth_current_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dashboard_header"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="-48dp">
+            android:layout_marginRight="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:id="@+id/dashboard_diff"
