--- a/app/src/main/res/layout/gains_widget.xml
+++ b/app/src/main/res/layout/gains_widget.xml
@@ -1,16 +1,19 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:padding="@dimen/widget_margin"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="@dimen/widget_margin">
 
     <ImageView
+        android:id="@+id/gains_widget_icon"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@mipmap/ic_launcher"
-        android:id="@+id/gains_widget_icon"/>
+        android:adjustViewBounds="true"
+        android:maxWidth="48dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/logo_s"/>
 
     <TextView
         android:id="@+id/gains_widget_percentage"
@@ -19,17 +22,15 @@
         android:textColor="@color/colorIcons"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:text="↑6.35%"
-        />
+        tools:text="↑6.35%"/>
 
     <TextView
         android:id="@+id/gains_widget_diff"
         android:layout_width="wrap_content"
-        android:paddingLeft="8dp"
         android:layout_height="wrap_content"
+        android:paddingLeft="8dp"
         android:textColor="@color/colorDivider"
         android:textSize="24sp"
         android:textStyle="bold"
         tools:text="£198.35"/>
-
 </LinearLayout>
