+ Added (currently empty) page to house the manipulation of currently harcoded values such as FI number & finds to watch.

--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -14,6 +14,10 @@
             android:id="@+id/nav_purchaseHistory"
             android:icon="@drawable/ic_calendar"
             android:title="@string/purchase_history"/>
+        <item
+            android:id="@+id/nav_controlPanel"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="@string/control_panel"/>
     </group>
 
 </menu>
